--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
+    "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1"
   }
